# ML_auto_pipeline

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ml_autopipeline/: __init__.py  cli.py
ml_pipeline/: __init__.py  cli.py  config_loader.py  eda.py  logging_utils.py  sampling.py  timing.py  training.py
tests/: test_eda.py  test_evaluation.py  test_sampling.py  test_training.py
